src/objects/Assessment_Meta_Data__c.object
<CustomObject>
    <description>All the review item data elements used to construct the different assessment types</description>
    <fields>
        <fullName>Category_Description__c</fullName>
        <label>Category Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Category_Priority__c</fullName>
        <label>Category Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Assets__c</fullName>
        <label>Item Assets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Priority__c</fullName>
        <label>Item Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Category__c</fullName>
        <label>Review Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Assessment</fullName>
                </value>
                <value>
                    <fullName>Financial Assessment</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Legal Assessment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Technical Review (Deep Dive)</fullName>
                </value>
                <value>
                    <fullName>Technical Review (periodic)</fullName>
                </value>
                <value>
                    <fullName>Technology Review (Prospect)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assessment Meta Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Review_Type__c</columns>
        <columns>Review_Category__c</columns>
        <columns>NAME</columns>
        <columns>Item_Description__c</columns>
        <columns>Item_Assets__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Review Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Meta Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>